Generalize files into resources.