@@ -5,10 +5,11 @@ import mb.pie.runtime.PieBuilderImpl;
 import mb.pie.runtime.logger.StreamLogger;
 import mb.pie.runtime.taskdefs.MutableMapTaskDefs;
 import mb.pie.store.lmdb.LMDBStoreKt;
-import mb.pie.vfs.path.*;
+import mb.pie.vfs.path.PPath;
 import org.jetbrains.annotations.NotNull;
 
 import java.io.*;
+import java.nio.file.Files;
 
 /**
  * This example demonstrates how to write a PIE build script in Kotlin with the PIE API, and how to incrementally execute that build script
@@ -21,7 +22,7 @@ public class Main {
      * The {@link WriteHelloWorld} {@link TaskDef task definition} takes as input a {@link PPath path} to a file, and then writes
      * "Hello, world!" to it. This task does not return a value, so we use {@link None} as output type.
      */
-    public static class WriteHelloWorld implements TaskDef<PPath, None> {
+    public static class WriteHelloWorld implements TaskDef<File, None> {
         /**
          * The {@link #getId} method must be overridden to provide a unique identifier for this task definition. In this case, we use
          * reflection to create a unique identifier.
@@ -34,15 +35,16 @@ public class Main {
          * The {@link #exec} method must be overridden to implement the logic of this task definition. This function is executed with an
          * {@link ExecContext execution context} object, which is used to tell PIE about dynamic task or file dependencies.
          */
-        @Override public None exec(@NotNull ExecContext context, @NotNull PPath input) throws ExecException {
+        @Override public @NotNull None exec(@NotNull ExecContext context, @NotNull File input) throws ExecException {
             // We write "Hello, world!" to the file.
-            try(final OutputStream outputStream = input.outputStream()) {
+            try(final OutputStream outputStream = new BufferedOutputStream(new FileOutputStream(input))) {
                 outputStream.write("Hello, world!".getBytes());
+                outputStream.flush();
             } catch(IOException e) {
                 throw new ExecException("Could not write to file " + input, e);
             }
-            // Since we have written to or created a file, we need to tell PIE about this dynamic dependency, by calling `generate` on the context.
-            context.generate(input);
+            // Since we have written to or created a file, we need to tell PIE about this dynamic dependency, by calling `provide` on the context.
+            context.provide(input);
             // Since this task does not generate a value, and we use the `None` type to indicate that, we need to return the singleton instance of `None`.
             return None.getInstance();
         }
@@ -53,15 +55,7 @@ public class Main {
             System.out.println("Expected 1 argument, got none");
             System.exit(1);
         }
-        final String fileStr = args[0];
-
-        // To work with paths that PIE can understand (PPath type), we create a PathSrv, and do some error checking.
-        final PathSrv pathSrv = new PathSrvImpl();
-        final PPath file = pathSrv.resolveLocal(fileStr);
-        if(file.exists() && file.isDir()) {
-            System.out.println("File " + file + " is a directory");
-            System.exit(2);
-        }
+        final File file = new File(args[0]);
 
         // Now we instantiate the task definitions.
         final WriteHelloWorld writeHelloWorld = new WriteHelloWorld();
@@ -82,7 +76,7 @@ public class Main {
         final Pie pie = pieBuilder.build();
 
         // Now we create concrete task instances from the task definitions.
-        final Task<PPath, None> writeHelloWorldTask = writeHelloWorld.createTask(file);
+        final Task<File, None> writeHelloWorldTask = writeHelloWorld.createTask(file);
 
         // We incrementally execute the hello world task using the top-down executor.
         // The first incremental execution will execute the task, since it is new.  When no changes to the written-to file are made, the task is
@@ -90,11 +84,9 @@ public class Main {
         pie.getTopDownExecutor().newSession().requireInitial(writeHelloWorldTask);
 
         // We print the text of the file to confirm that "Hello, world!" was indeed written to it.
-        System.out.println("File contents: " + new String(file.readAllBytes()));
+        System.out.println("File contents: " + new String(Files.readAllBytes(file.toPath())));
 
-        // Finally, we clean up our resources. PIE must be closed to ensure the database has been fully serialized. PathSrv must be closed to
-        // clean up temporary files.
+        // Finally, we clean up our resources. PIE must be closed to ensure the database has been fully serialized.
         pie.close();
-        pathSrv.close();
     }
 }
